# Greeting-UT

./: README.md
Greeting/: CMakeLists.txt  commands.txt
Greeting/project-exe/: CMakeLists.txt  main.cpp
Greeting/say-greetings/: CMakeLists.txt
Greeting/say-greetings/src/say-greetings/: greeting.cpp  greeting.hpp
Greeting/say-greetings/src/say-greetings/unit_test/: greeting_test.cpp
